--- a/src/NSwag.CodeGeneration.TypeScript/Templates/Client.RequestUrl.liquid
+++ b/src/NSwag.CodeGeneration.TypeScript/Templates/Client.RequestUrl.liquid
@@ -23,38 +23,38 @@ else
 {% for parameter in operation.QueryParameters -%}
 {%     if parameter.IsRequired -%}
 {%         if parameter.IsNullable -%}
-if ({{ parameter.VariableName }} === undefined)
+if ({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} === undefined)
     throw new Error("The parameter '{{ parameter.VariableName }}' must be defined.");
 else
 {%         else -%}
-if ({{ parameter.VariableName }} === undefined || {{ parameter.VariableName }} === null)
+if ({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} === undefined || {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} === null)
     throw new Error("The parameter '{{ parameter.VariableName }}' must be defined and cannot be null.");
 else
 {%         endif -%}
 {%     else -%}
 {%         if parameter.IsNullable -%}
-if ({{ parameter.VariableName }} !== undefined)
+if ({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} !== undefined)
 {%         else -%}
-if ({{ parameter.VariableName }} === null)
+if ({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} === null)
     throw new Error("The parameter '{{ parameter.VariableName }}' cannot be null.");
-else if ({{ parameter.VariableName }} !== undefined)
+else if ({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} !== undefined)
 {%         endif -%}
 {%     endif -%}
 {%     if parameter.IsDateOrDateTimeArray -%}
-    {{ parameter.VariableName }} && {{ parameter.VariableName }}.forEach(item_ => { url_ += "{{ parameter.Name }}=" + encodeURIComponent(item_ ? "" + item_.toJSON() : "null") + "&"; });
+    {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} && {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }}.forEach(item_ => { url_ += "{{ parameter.Name }}=" + encodeURIComponent(item_ ? "" + item_.toJSON() : "null") + "&"; });
 {%     elseif parameter.IsObjectArray -%}
-    {{ parameter.VariableName }} && {{ parameter.VariableName }}.forEach((item, index) => { 
+    {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} && {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }}.forEach((item, index) => { 
         for (let attr in item)
 			if (item.hasOwnProperty(attr)) {
 				url_ += "{{ parameter.Name }}[" + index + "]." + attr + "=" + encodeURIComponent("" + (<any>item)[attr]) + "&";
 			}
     });
 {%     elseif parameter.IsDateOrDateTime -%}
-    url_ += "{{ parameter.Name }}=" + encodeURIComponent({{ parameter.VariableName }} ? "" + {{ parameter.VariableName }}.toJSON() : "{{ QueryNullValue }}") + "&"; 
+    url_ += "{{ parameter.Name }}=" + encodeURIComponent({% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} ? "" + {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }}.toJSON() : "{{ QueryNullValue }}") + "&"; 
 {%     elseif parameter.IsArray -%}
-    {{ parameter.VariableName }} && {{ parameter.VariableName }}.forEach(item => { url_ += "{{ parameter.Name }}=" + encodeURIComponent("" + item) + "&"; });
+    {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }} && {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }}.forEach(item => { url_ += "{{ parameter.Name }}=" + encodeURIComponent("" + item) + "&"; });
 {%     else -%}
-    url_ += "{{ parameter.Name }}=" + encodeURIComponent("" + {{ parameter.VariableName }}) + "&"; 
+    url_ += "{{ parameter.Name }}=" + encodeURIComponent("" + {% if operation.IsGetOrHead -%}requestData.{% endif -%}{{ parameter.VariableName }}) + "&"; 
 {%     endif -%}
 {% endfor -%}
 url_ = url_.replace(/[?&]$/, "");
