--- a/src/NSwag.CodeGeneration.TypeScript/Templates/AngularClient.liquid
+++ b/src/NSwag.CodeGeneration.TypeScript/Templates/AngularClient.liquid
@@ -40,11 +40,12 @@
 
 	{%- assign nonQueryParameters = operation.Parameters | where: "IsQuery", false -%}
 	{%- assign hasWrappedQueryParameter = operation.IsGetOrHead and operation.QueryParameters.size > 0 -%}
+	{%- assign openBraces = "{" -%}
     {% template Client.Method.Documentation %}
     {{ operation.MethodAccessModifier }}{{ operation.ActualOperationName }}({% for parameter in nonQueryParameters %}{{ parameter.VariableName }}{% if GenerateOptionalParameters and parameter.IsOptional %}?{% endif %}: {{ parameter.Type }}{{ parameter.TypePostfix }}{% if parameter.IsLast == false or hasWrappedQueryParameter == true %}, {% endif -%}{%- endfor -%}
-	{%- if hasWrappedQueryParameter == true -%}request: {%- for parameter in operation.QueryParameters %}
-			{{ parameter.VariableName }}{% if GenerateOptionalParameters and parameter.IsOptional %}?{% endif %}: {{ parameter.Type }}{{ parameter.TypePostfix }},{%- endfor -%}		
-		}{%- endif -%}): Observable<{{ operation.ResultType }}> {
+	{%- if hasWrappedQueryParameter == true -%}request: {{ openBraces }}{%- for parameter in operation.QueryParameters %}
+		{{ parameter.VariableName }}{% if GenerateOptionalParameters and parameter.IsOptional %}?{% endif %}: {{ parameter.Type }}{{ parameter.TypePostfix }},{%- endfor %}
+	} {%- endif -%}): Observable<{{ operation.ResultType }}> {
         {% template Client.RequestUrl %}
 
 {%     if operation.HasBody -%}
